test/good/classes/var02.px

class A def
    x: Int

class B def
    a: A

b = B(A())
b.a = b.a
b.a.x = 3

b = b
b' = b
b' = b'

print b'.a.x

a = A()
a.x = 5
b'.a = a

print b.a.x
