test/bad/classes/name01.px

class A def
    x: Int

A = A
